tests/jit/pass/tuple_is_structural.cpm
(* Copyright 2023 Enrico Granata *)
(* *)
(* Licensed under the Apache License, Version 2.0 (the "License"); *)
(* you may not use this file except in compliance with the License. *)
(* You may obtain a copy of the License at *)
(*  *)
(*     http://www.apache.org/licenses/LICENSE-2.0 *)
(*  *)
(* Unless required by applicable law or agreed to in writing, software *)
(* distributed under the License is distributed on an "AS IS" BASIS, *)
(* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *)
(* See the License for the specific language governing permissions and *)
(* limitations under the License. *)

type T = {int32, int32};

func main() ret int64 {
    var a: T = {3 as int32, 4 as int32};
    let b = {5 as int32, 2 as int32};

    a = b;
    return (a[0] - a[1] - a[1]) as int64 - 1;
}
