tests/jit/fail/named_type_is_not_structural.cpm
(* Copyright 2023 Enrico Granata *)
(* *)
(* Licensed under the Apache License, Version 2.0 (the "License"); *)
(* you may not use this file except in compliance with the License. *)
(* You may obtain a copy of the License at *)
(*  *)
(*     http://www.apache.org/licenses/LICENSE-2.0 *)
(*  *)
(* Unless required by applicable law or agreed to in writing, software *)
(* distributed under the License is distributed on an "AS IS" BASIS, *)
(* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *)
(* See the License for the specific language governing permissions and *)
(* limitations under the License. *)

val type T {
    x: int32,
    y: int32
}

func main() ret int64 {
    var a = alloc T{x: 3 as int32, y: 4 as int32};
    var b = {5 as int32, 2 as int32};

    a = b;
    return (a.x - a.y - a.y) as int64 - 1;
}
